// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxButtonGroup sets initial value properly 1`] = `
<div
  className="CheckboxButtonGroup"
  id="checkbox-question"
>
  <label
    className="FormControlLabel CheckboxButton"
    htmlFor="first"
  >
    <span
      className="FormControlLabel__control"
    >
      <input
        checked={true}
        id="first"
        onChange={[Function]}
        type="checkbox"
        value={1}
      />
    </span>
    First value
  </label>
  <label
    className="FormControlLabel CheckboxButton"
    htmlFor="second"
  >
    <span
      className="FormControlLabel__control"
    >
      <input
        checked={true}
        id="second"
        onChange={[Function]}
        type="checkbox"
        value={2}
      />
    </span>
    Second value
  </label>
</div>
`;

exports[`CheckboxButtonGroup will update array state to check a new item 1`] = `
<div
  className="CheckboxButtonGroup"
  id="checkbox-question"
>
  <label
    className="FormControlLabel CheckboxButton"
    htmlFor="first"
  >
    <span
      className="FormControlLabel__control"
    >
      <input
        checked={true}
        id="first"
        onChange={[Function]}
        type="checkbox"
        value={1}
      />
    </span>
    First value
  </label>
  <label
    className="FormControlLabel CheckboxButton"
    htmlFor="second"
  >
    <span
      className="FormControlLabel__control"
    >
      <input
        checked={false}
        id="second"
        onChange={[Function]}
        type="checkbox"
        value={2}
      />
    </span>
    Second value
  </label>
</div>
`;

exports[`CheckboxButtonGroup will update array state to uncheck an item 1`] = `
<div
  className="CheckboxButtonGroup"
  id="checkbox-question"
>
  <label
    className="FormControlLabel CheckboxButton"
    htmlFor="first"
  >
    <span
      className="FormControlLabel__control"
    >
      <input
        checked={false}
        id="first"
        onChange={[Function]}
        type="checkbox"
        value={1}
      />
    </span>
    First value
  </label>
  <label
    className="FormControlLabel CheckboxButton"
    htmlFor="second"
  >
    <span
      className="FormControlLabel__control"
    >
      <input
        checked={false}
        id="second"
        onChange={[Function]}
        type="checkbox"
        value={2}
      />
    </span>
    Second value
  </label>
</div>
`;
